fixed flex-wrap issues

--- a/client/src/app/components/activities/activity-feed/feed-item-details/shared/activity-revision/activity-revision.component.less
+++ b/client/src/app/components/activities/activity-feed/feed-item-details/shared/activity-revision/activity-revision.component.less
@@ -1,5 +1,9 @@
 @import 'ng-zorro-antd/style/color/colors.less';
 @import 'themes/global-variables.less';
+
+.title-row {
+  flex-wrap: nowrap;
+}
 :host {
   display: block;
   ::ng-deep {
